fixes overflow y

--- a/style.css
+++ b/style.css
@@ -21,18 +21,19 @@
 }
 
 body{
-    
+    height: auto;
     background-color: var(--bg-color-yellow);
+    overflow-y: hidden;
 }
 .cards-contanier{
     width: 100%;
     height: auto;
     display: grid;
     place-items: center;
-    margin-top: 50%;
+     margin-top: 10%;
 }
 .card{
-    width: 380px;
+    width: 360px;
     height: 500px;
     border-radius: 10px;
     padding: 20px;
